# bevy_wallpaper

./: .gitignore  Cargo.toml  README.md  justfile
assets/models/asteroid/: model.gltf
assets/models/astronaut/: astronaut.gltf  license.txt
src/: lib.rs
src/space_objects/: asteroid.rs  mod.rs
src/space_stuff/: mod.rs
src/space_stuff/space_objects/: asteroid.rs  astronaut.rs  mod.rs
src/sphere/: mod.rs
