[package]
name = "bevy_wallpaper"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = ["animation", "bevy_animation", "bevy_asset", "bevy_audio", "bevy_color", "bevy_core_pipeline", "bevy_gizmos", "bevy_gltf", "bevy_mesh_picking_backend", "bevy_pbr", "bevy_picking", "bevy_render", "bevy_scene", "bevy_sprite", "bevy_sprite_picking_backend", "bevy_state", "bevy_text", "bevy_ui", "bevy_ui_picking_backend", "bevy_window", "default_font", "hdr", "ktx2", "multi_threaded", "png", "smaa_luts", "sysinfo_plugin", "tonemapping_luts", "vorbis", "x11", "zstd", "zlib"] }
bevy_linux_wallpaper = { git = "https://github.com/calacuda/bevy-linux-wallpaper", version = "0.1.0" }
bevy_obj = { version = "0.15.1", features = ["log"] }
enum_dispatch = "0.3.13"
rand = { version = "0.9.0", features = ["nightly"] }
serde = { version = "1.0.219", features = ["derive"] }
